# container2wasm

./: Dockerfile  Dockerfile.test  Makefile  README.md  go.mod  go.sum
.github/workflows/: fossa.yml  release.yml  tests.yml
cmd/c2w/: main.go
cmd/c2w-net/: main.go
cmd/create-spec/: main.go
cmd/init/: main.go
cmd/init/types/: types.go
config/qemu/: args-aarch64.json.template  args-riscv64.json.template  args-x86_64.json.template
docs/plans/: 2026-01-26-fs-wrapper-component.md  2026-01-26-wasip2-cli-integration.md  2026-01-26-wasip2-support-design.md  2026-01-26-wasip2-support-impl.md
examples/: README.md
examples/emscripten/: README.md
examples/emscripten-simple/htdocs/: index.html
examples/emscripten/htdocs/: index.html  package-lock.json  package.json  stack.js
examples/llm-agent/: README.md
examples/no-conversion-emscripten/htdocs/: index.html
extras/c2w-net-proxy/: go.mod  go.sum
extras/fs-wrapper/: .gitignore  Cargo.toml  README.md  build.rs  default-wasi2-config
extras/fs-wrapper/src/: bindings.rs  lib.rs
extras/fs-wrapper/wit/: world.wit
extras/imagemounter/: go.mod  go.sum  main.go
extras/runcontainerjs/: Dockerfile  README.md  package-lock.json
extras/runcontainerjs/src/web/: runcontainer.js  stack-worker.js
tests/: bench.sh  docker-compose.yml
tests/Dockerfile.d/: Dockerfile.certs  Dockerfile.node-chrome  Dockerfile.node-edge  Dockerfile.node-firefox  Dockerfile.runner  Dockerfile.testpage
tests/c2w-net-proxy-test/: go.mod
tests/imagemounter-test/: go.mod  go.sum
tests/integration/: tools_test.go  wasmtime_test.go  wazero_test.go
tests/integration/utils/: utils.go
tests/scripts/testpage/: index.html
tests/wazero/: go.mod  go.sum
