[package]
name = "fs-wrapper"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = "0.41"

[package.metadata.component]
package = "c2w:fs-wrapper"

[package.metadata.component.target]
path = "wit"

[package.metadata.component.target.dependencies]
"wasi:io" = "0.2.9"
"wasi:clocks" = "0.2.9"
"wasi:filesystem" = "0.2.9"
